version/0.33/_sources/api/solver/_autosummary/settings/porous_jump_child.rst.txt
:orphan:

.. _porous_jump_child:

porous_jump_child
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.porous_jump_child
    :show-inheritance:

.. rubric:: Attributes

==============================   ======================================

Attribute                                                       Summary

==============================   ======================================
:ref:`name <name_4>`                                Name of the object.

:ref:`locations <locations_2>`                     Input location name.

:ref:`settings <settings_15>`        Domain name to define settings on.

==============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

================================   ================

Parent                                      Summary

================================   ================
:ref:`porous_jump <porous_jump>`       Thread-type.

================================   ================

